--- a/api/package.json
+++ b/api/package.json
@@ -1,55 +1,61 @@
 {
-   "name": "node-js-starter",
-   "version": "1.0.0",
-   "description": "Node.js api starter",
-   "main": "index.js",
-   "scripts": {
-      "lint": "npm run eslint",
-      "eslint": "npx eslint src --fix",
-      "dev": "nodemon",
-      "build": "tsc",
-      "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
-   },
-   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/pzpsofficial/node-js-starter.git"
-   },
-   "author": "Bartosz Karpiel",
-   "license": "ISC",
-   "bugs": {
-      "url": "https://github.com/pzpsofficial/node-js-starter/issues"
-   },
-   "homepage": "https://github.com/pzpsofficial/node-js-starter#readme",
-   "dependencies": {
-      "@types/bcrypt": "^5.0.0",
-      "@types/validator": "^13.7.10",
-      "bcrypt": "^5.1.0",
-      "class-validator": "^0.13.2",
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2",
-      "pg": "^8.4.0",
-      "reflect-metadata": "^0.1.13",
-      "swagger-jsdoc": "^6.2.5",
-      "swagger-ui-express": "^4.6.0",
-      "typeorm": "0.3.10",
-      "validator": "^13.7.0"
-   },
-   "devDependencies": {
-      "@types/cors": "^2.8.12",
-      "@types/express": "^4.17.14",
-      "@types/node": "^16.11.10",
-      "@types/swagger-jsdoc": "^6.0.1",
-      "@types/swagger-ui-express": "^4.1.3",
-      "@typescript-eslint/eslint-plugin": "^5.43.0",
-      "@typescript-eslint/parser": "^5.43.0",
-      "eslint": "^8.27.0",
-      "eslint-config-prettier": "^8.5.0",
-      "eslint-plugin-prettier": "^4.2.1",
-      "nodemon": "^2.0.20",
-      "prettier": "^2.7.1",
-      "ts-node": "10.7.0",
-      "typescript": "4.5.2"
-   }
+    "name": "node-js-starter",
+    "version": "1.0.0",
+    "description": "Node.js api starter",
+    "main": "index.js",
+    "scripts": {
+        "lint": "npm run eslint",
+        "eslint": "npx eslint src --fix",
+        "dev": "nodemon",
+        "build": "tsc",
+        "start": "ts-node src/index.ts",
+        "typeorm": "typeorm-ts-node-commonjs"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/pzpsofficial/node-js-starter.git"
+    },
+    "author": "Bartosz Karpiel",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/pzpsofficial/node-js-starter/issues"
+    },
+    "homepage": "https://github.com/pzpsofficial/node-js-starter#readme",
+    "dependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/express-session": "^1.17.5",
+        "@types/passport": "^1.0.11",
+        "@types/passport-local": "^1.0.34",
+        "@types/validator": "^13.7.10",
+        "bcrypt": "^5.1.0",
+        "class-validator": "^0.13.2",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "express-session": "^1.17.3",
+        "passport": "^0.6.0",
+        "passport-local": "^1.0.0",
+        "pg": "^8.4.0",
+        "reflect-metadata": "^0.1.13",
+        "swagger-jsdoc": "^6.2.5",
+        "swagger-ui-express": "^4.6.0",
+        "typeorm": "0.3.10",
+        "validator": "^13.7.0"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.14",
+        "@types/node": "^16.11.10",
+        "@types/swagger-jsdoc": "^6.0.1",
+        "@types/swagger-ui-express": "^4.1.3",
+        "@typescript-eslint/eslint-plugin": "^5.43.0",
+        "@typescript-eslint/parser": "^5.43.0",
+        "eslint": "^8.27.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "nodemon": "^2.0.20",
+        "prettier": "^2.7.1",
+        "ts-node": "10.7.0",
+        "typescript": "4.5.2"
+    }
 }
