--- a/ui/package.json
+++ b/ui/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.5.0",
+    "@vueuse/integrations": "^9.7.0",
     "axios": "^1.2.0",
     "pinia": "^2.0.23",
+    "universal-cookie": "^4.0.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.5"
   },
