--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/express-session": "^1.17.5",
+        "@types/multer": "^1.4.7",
         "@types/passport": "^1.0.11",
         "@types/passport-local": "^1.0.34",
         "@types/validator": "^13.7.10",
@@ -33,6 +34,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "multer": "^1.4.5-lts.1",
         "passport": "^0.6.0",
         "passport-local": "^1.0.0",
         "pg": "^8.4.0",
